IVYPORTAL-16596-UI-of-configuraiton-dialog-broken-after-user-manually-resize-it-LE - Fix broken UI

--- a/AxonIvyPortal/portal/webContent/resources/css/dashboard.css
+++ b/AxonIvyPortal/portal/webContent/resources/css/dashboard.css
@@ -8,6 +8,10 @@
   padding-bottom: 1rem;
 }
 
+div#new-widget-dialog_content {
+  width: auto !important;
+}
+
 .new-widget-dialog__content .ui-datagrid-content{
   padding: 0;
   border: none;
